# CoinHQ

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  railway.toml  render.yaml
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_share_links.py  003_add_user_model_and_profile_user_id.py  004_add_share_link_view_count.py  005_add_user_tier.py  006_add_follow_feature.py  007_add_indexes_and_constraints.py  008_add_trade_support.py  009_add_waitlist.py  010_add_portfolio_snapshots.py  011_share_links_timestamptz.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  database.py  limits.py  logging.py  migrations.py  redis_client.py  security.py  trade_limits.py
backend/app/exchanges/: __init__.py  base.py  binance.py  binancetr.py  bybit.py  coinbase.py  demo.py  factory.py  gateio.py  kraken.py  okx.py
backend/app/models/: __init__.py  exchange_key.py  followed_portfolio.py  portfolio_snapshot.py  profile.py  user.py  (+3 more)
backend/scripts/: migrate_or_stamp.py  rotate_keys.py  seed_demo.py
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_config.py  test_exchanges.py  test_factory.py  test_integration_conditions.py  test_isolation.py  test_keys_api.py  test_limits.py  test_pnl.py  test_portfolio_history.py  test_portfolio_service.py  test_price_service.py  test_prod_hardening.py  test_profiles_api.py  test_security.py  test_share.py  test_trade.py  test_waitlist.py
(+138 files in other folders)
